force-app/main/default/objects/Animal_Note__c/Animal_Note__c.object-meta.xml
<CustomObject>
    <description>Used to track notes about the animal</description>
    <label>Animal Note</label>
    <nameField>
        <label>Animal Note Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Animal Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>