force-app/main/default/objects/Animal_Note__c/fields/Animal_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Animal_Note_Date__c</fullName>
    <label>Animal Note Date</label>
    <type>Date</type>
</CustomField>