force-app/main/default/objects/Animal_Note__c/fields/Animal_Note_Detail__c.field-meta.xml
<CustomField>
    <fullName>Animal_Note_Detail__c</fullName>
    <label>Animal Note Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>